# mas-mcp-toolmaker

./: .gitignore  CHANGELOG.md  README.md  mas-mcp-toolmaker.ipynb  pyproject.toml  sample.env
modules/: get_module_info.py  get_viya_info.py  script_http_server.py  script_ram_server.py  script_stdio_server.py
scripts/: clean_cache.py
src/mas_mcp_toolmaker/: __init__.py  mas_module.py
src/mas_mcp_toolmaker/modules/: get_module_info.py  script_ram_server.py  script_stdio_server.py
