[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mas-mcp-toolmaker"
dependencies = ["requests","python-dotenv"]
version = "1.1.0"
authors = [
  { name="Sundaresh Sankaran", email="sundaresh.sankaran@gmail.com" },
]
description = "A package containing a Python class and associated methods to create a MCP server script from published SAS Micro Analytic Service (MAS) modules."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SundareshSankaran/mas-mcp-toolmaker"
Issues = "https://github.com/SundareshSankaran/mas-mcp-toolmaker/issues"
